--- a/styles.css
+++ b/styles.css
@@ -429,5 +429,150 @@ body {
   border-radius: 15px;
 }
 
+.btn-photo:hover {
+  background-color: #0000cc;
+}
+
+/*--------------------------------FOOTER-----------------------*/
+
+footer {
+  margin: 0 auto;
+  width: 1440px;
+  height: 349px;
+  background-color:#010632;
+}
+
+.logo-footer {
+  margin: 0 auto;
+  width: 463px;
+  height: 69px;
+  font-family: 'Istok Web';
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 69px;
+  color: #ffffff;
+}
+
+.footer-container {
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 28px;
+  padding-left: 138px;
+}
+
+.web2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 26px;
+  line-height: 1.19;
+  color: #2196F3
+}
+
+.adress {
+  width: 106px;
+  height: 35px;
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 35px;
+  color: #FFFFFF;
+}
+
+.adress-link {
+  width: 231px;
+  height: 21px;
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.contacts-ul {
+  margin-top: 9px;
+  padding: 0;
+}
+
+.footer-social {
+  display: flex;
+  padding: 0;
+}
+
+
+.footer-flex {
+  display: flex;
+}
+
+address {
+  margin-right: 318px;
+}
+
+.footer-heading {
+  width: 99px;
+  height: 35px;
+  margin-bottom: 32px;
+  font-family: "Jost";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 35px;
+  color: #ffffff;
+}
+
+.social-link {
+  display: flex;
+  padding: 0;
+}
+
+.link-items:not(:last-child) {
+  margin-right: 15px;
+}
+
+.link-item {
+  display: flex;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.social-one {
+  fill: #FFFFFF;
+  width: 20px;
+  height: 20px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.social-two {
+  fill: #FFFFFF;
+  width: 20px;
+  height: 20px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.social-three {
+  fill: #FFFFFF;
+  width: 20px;
+  height: 20px;
+  margin-left: 12px;
+  margin-right: 12.84px;
+}
+
+.social-four {
+  fill: #FFFFFF;
+  width: 20px;
+  height: 20px;
+  margin-left: 12px;
+  margin-right: 12px;
+
+}
+
+.link-item:hover {
+  background-color: #2196F3;
+}
 
 
